--- a/yssl/res/layout/item_collect_list.xml
+++ b/yssl/res/layout/item_collect_list.xml
@@ -1,60 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.strod.yssl.view.swipelistview.ScrollLinerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/front"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal" >
+    android:padding="8dp"
+    android:tag="front">
 
-    <RelativeLayout
-        android:id="@+id/front"
-        android:layout_width="fill_parent"
+    <ImageView
+        android:id="@+id/content_img"
+        android:layout_width="100dp"
+        android:layout_height="60dp"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:scaleType="fitXY" />
+
+    <TextView
+        android:id="@+id/content_title"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:tag="front" >
+        android:layout_marginLeft="8dp"
+        android:layout_toRightOf="@+id/content_img"
+        android:textColor="?attr/fontTitleColor"
+        android:textSize="@dimen/font_size_fourteen" />
 
-        <ImageView
-            android:id="@+id/content_img"
-            android:layout_width="100dp"
-            android:layout_height="60dp"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true" />
-
-        <TextView
-            android:id="@+id/content_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_toRightOf="@+id/content_img" />
-
-        <TextView
-            android:id="@+id/content_detail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/content_title"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_toRightOf="@+id/content_img"
-            android:maxLines="2" />
-    </RelativeLayout>
-    <LinearLayout
-        android:id="@+id/back"
-        android:layout_width="@dimen/delete_action_len"
-        android:layout_height="fill_parent"
-        android:tag="back" >
-
-        <TextView
-            android:id="@+id/item_top"
-            android:layout_width="70dp"
-            android:layout_height="fill_parent"
-            android:background="#FFD700"
-            android:gravity="center"
-            android:text="@string/item_top" />
-
-        <TextView
-            android:id="@+id/item_delete"
-            android:layout_width="70dp"
-            android:layout_height="fill_parent"
-            android:background="#FF6347"
-            android:gravity="center"
-            android:text="@string/item_delete" />
-    </LinearLayout>
-</com.strod.yssl.view.swipelistview.ScrollLinerLayout>
+    <TextView
+        android:id="@+id/content_detail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/content_title"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_toRightOf="@+id/content_img"
+        android:maxLines="2"
+        android:textColor="?attr/fontContentColor"
+        android:textSize="@dimen/font_size_twelve" />
+</RelativeLayout>
