--- a/yssl/res/layout/item_setting_list.xml
+++ b/yssl/res/layout/item_setting_list.xml
@@ -20,6 +20,8 @@
             android:layout_alignParentLeft="true"
             android:layout_marginLeft="8dp"
             android:layout_centerVertical="true"
+            android:textSize="@dimen/font_size_fourteen"
+            android:textColor="?attr/fontContentColor"
             android:gravity="center" />
 
         <com.strod.yssl.view.SwitchButton
@@ -37,7 +39,8 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toLeftOf="@+id/arrow"
-            android:layout_marginRight="@dimen/margin_little"
+            android:textSize="@dimen/font_size_twelve"
+            android:textColor="?attr/fontContentColor"
             android:gravity="center" />
 
         <ImageView
