--- a/yssl/res/layout/fragment_content_list.xml
+++ b/yssl/res/layout/fragment_content_list.xml
@@ -12,6 +12,8 @@
     android:footerDividersEnabled="true"
     android:headerDividersEnabled="true"
     android:smoothScrollbar="true"
+    android:overScrollMode="never"
+    app:ptrShowIndicator = "false"
     app:ptrMode = "both"
     app:ptrAnimationStyle = "flip"
      />
