--- a/yssl/res/values/colors.xml
+++ b/yssl/res/values/colors.xml
@@ -25,8 +25,8 @@
     
     <color name="menu_pressed">#e5e5e5</color>
     
-    <color name="content_font_color">#f8f8f8</color>
-    <color name="content_font_color_deep">#ff5a3f01</color>
+    <color name="content_font_color">#88666666</color>
+    <color name="content_font_color_deep">#FF666666</color>
     <color name="content_font_color_deeper">#423413</color>
     <color name="setting_bg_color">#b08b18</color>
     
