--- a/yssl/res/values/pull_refresh_strings.xml
+++ b/yssl/res/values/pull_refresh_strings.xml
@@ -2,13 +2,13 @@
 <resources>
 
     <string name="pull_to_refresh_pull_label">下拉刷新…</string>
-    <string name="pull_to_refresh_release_label">放开以刷新…</string>
-    <string name="pull_to_refresh_refreshing_label">正在载入…</string>
+    <string name="pull_to_refresh_release_label">松开刷新…</string>
+    <string name="pull_to_refresh_refreshing_label">加载中…</string>
     <string name="pull_to_refresh_last_refresh_label">上次更新</string>
 
     <!-- Just use standard Pull Down String when pulling up. These can be set for languages which require it -->
-    <string name="pull_to_refresh_from_bottom_pull_label">上拉刷新…</string>
-    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
-    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
+    <string name="pull_to_refresh_from_bottom_pull_label">上拉加载更多…</string>
+    <string name="pull_to_refresh_from_bottom_release_label">松开加载更多…</string>
+    <string name="pull_to_refresh_from_bottom_refreshing_label">加载中…</string>
 
 </resources>
