--- a/yssl/res/values/ids.xml
+++ b/yssl/res/values/ids.xml
@@ -4,6 +4,7 @@
     <item type="id" name="gridview" />
     <item type="id" name="webview" />
     <item type="id" name="scrollview" />
+    <item type="id" name="recyclerview" />
 
     <item type="id" name="dgv_wobble_tag"/>
 </resources>
